# pdf-watermark

./: .gitignore  watermark.py
.github/workflows/: pages.yml
watermark_rs/: Cargo.toml
watermark_rs/src/: builder.rs  lib.rs  main.rs  pdf.rs  watermark.rs
watermark_rs/web/: index.html
watermark_rs/web/pkg/: package.json  watermark.d.ts  watermark.js  watermark_bg.wasm  watermark_bg.wasm.d.ts
