[package]
name = "watermark"
version = "0.1.0"
edition = "2021"

[dependencies]
lopdf = "0.34"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
flate2 = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
